--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.live.live"
+        applicationId "org.live"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
@@ -20,9 +20,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'net.steamcrafted:materialiconlib:1.1.3'
+    //compile 'com.afollestad.material-dialogs:core:0.9.3.0'
+    compile 'com.appyvet:materialrangebar:1.3'
+    compile 'com.orhanobut:dialogplus:1.11@aar'
+    compile 'com.github.zcweng:switch-button:0.0.2@aar'
+    compile files('src/main/jniLibs/txrtmpsdk.jar')
 }
