--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,18 +22,24 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <application
+        android:name=".common.application.CommonApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="org.live.module.demo.MainActivity">
+        <activity android:name=".module.demo.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="org.live.module.publish.view.impl.PublishActivity" />
+        <activity android:name=".module.publish.view.impl.PublishActivity" />
+
+        <service
+            android:name=".module.publish.service.PublishPreferencesService"
+            android:exported="false" />
     </application>
 
 </manifest>
