--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:support-v4:25.1.1'
-    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:support-v4:25.2.0'
+    compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'net.steamcrafted:materialiconlib:1.1.3' // 图标库
     compile 'com.appyvet:materialrangebar:1.3' // 拉杆样式
     compile 'com.orhanobut:dialogplus:1.11@aar' // 增强对话框
     compile 'com.github.zcweng:switch-button:0.0.2@aar' // 滑动按钮
     compile 'com.getbase:floatingactionbutton:1.10.1' // 浮动按钮样式
     compile files('src/main/jniLibs/txrtmpsdk.jar') // 腾讯STMP SDK
+    compile 'com.ogaclejapan.arclayout:library:1.1.0@aar'
 }
