--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     compile 'com.github.zcweng:switch-button:0.0.2@aar' // 滑动按钮
     compile 'com.getbase:floatingactionbutton:1.10.1' // 浮动按钮样式
     compile files('src/main/jniLibs/txrtmpsdk.jar') // 腾讯STMP SDK
+    compile 'devlight.io:navigationtabbar:1.2.5'    //actionBar 主界面的导航栏
+    compile 'com.flyco.dialog:FlycoDialog_Lib:1.3.2@aar'    //弹出消息提示框
 }
