--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,6 @@ dependencies {
     compile 'com.getbase:floatingactionbutton:1.10.1' // 浮动按钮样式
     compile files('src/main/jniLibs/txrtmpsdk.jar') // 腾讯STMP SDK
     compile 'com.flyco.dialog:FlycoDialog_Lib:1.3.2@aar'    //弹出消息提示框
-    compile 'devlight.io:navigationtabbar:1.2.5'    //actionBar 主界面的导航栏
+    //compile 'devlight.io:navigationtabbar:1.2.5'    //主界面的底部导航栏
     compile 'me.majiajie:pager-bottom-tab-strip:2.1.0'  //主界面的底部导航栏
 }
