capture模块和publish模块确认版本

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,9 @@
         <service
             android:name=".common.service.PreferencesService"
             android:exported="false" />
+        <service
+            android:name=".module.capture.service.CaptureService"
+            android:exported="false" />
     </application>
 
 </manifest>
