添加聊天模块，暂未美化界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,10 +30,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".module.demo.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
         <activity android:name=".module.publish.view.impl.PublishActivity" />
         <activity android:name=".module.play.view.impl.PlayActivity" />
@@ -43,9 +40,15 @@
         <activity
             android:name=".module.capture.view.impl.CaptureActivity"
             android:launchMode="singleTask" />
-
         <activity android:name=".module.home.view.HomeActivity" />
 
+        <activity android:name=".module.chat.view.impl.ChatActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <!-- service -->
         <service
             android:name=".common.service.PreferencesService"
@@ -53,6 +56,8 @@
         <service
             android:name=".module.capture.service.CaptureService"
             android:exported="false" />
+        <service android:name=".module.chat.service.ChatService" />
+
     </application>
 
 </manifest>
