--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,10 @@ dependencies {
     compile 'com.appyvet:materialrangebar:1.3' // 拉杆样式
     compile 'com.orhanobut:dialogplus:1.11@aar' // 增强对话框
     compile 'com.github.zcweng:switch-button:0.0.2@aar' // 滑动按钮
-    compile 'com.getbase:floatingactionbutton:1.10.1' // 浮动按钮样式
+    //compile 'com.getbase:floatingactionbutton:1.10.1' // 浮动按钮样式
     compile files('src/main/jniLibs/txrtmpsdk.jar') // 腾讯STMP SDK
     compile 'com.flyco.dialog:FlycoDialog_Lib:1.3.2@aar'    //弹出消息提示框
     //compile 'devlight.io:navigationtabbar:1.2.5'    //主界面的底部导航栏
     compile 'me.majiajie:pager-bottom-tab-strip:2.1.0'  //主界面的底部导航栏
+    compile 'com.koushikdutta.async:androidasync:2.+'// 异步http框架，用于支持websocket请求和http请求
 }
