添加了Gson， XRecycleView,Glide，类库，  封装GSON的单例模式，JsonUtils，直播分类已完成。暗号： 城哥好帅，棒棒的。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         <activity
             android:name=".module.capture.view.impl.CaptureActivity"
             android:launchMode="singleTask" />
-        <activity android:name=".module.home.view.HomeActivity" />
+        <activity android:name=".module.home.view.impl.HomeActivity" />
 
         <activity android:name=".module.chat.view.impl.ChatActivity">
 
