--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'net.steamcrafted:materialiconlib:1.1.3' // 图标库
     compile 'com.appyvet:materialrangebar:1.3' // 拉杆样式
     compile 'com.orhanobut:dialogplus:1.11@aar' // 增强对话框
@@ -37,4 +38,8 @@ dependencies {
     //compile 'devlight.io:navigationtabbar:1.2.5'    //主界面的底部导航栏
     compile 'me.majiajie:pager-bottom-tab-strip:2.1.0'  //主界面的底部导航栏
     compile 'com.koushikdutta.async:androidasync:2.+'// 异步http框架，用于支持websocket请求和http请求
+    compile 'com.github.bumptech.glide:glide:3.7.0' //glide,图片加载类库
+    compile 'com.jcodecraeer:xrecyclerview:1.3.2'   //用于实现recyclerview下拉刷新，上拉加载更多
+    compile 'com.google.code.gson:gson:2.6.2'
 }
+
