home模块暂存版本。  城哥棒棒的。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,8 @@
             android:exported="false" />
         <service android:name=".module.chat.service.ChatService" />
 
+        <activity android:name=".module.home.view.impl.SingleCategoryActivity"/>
+
     </application>
 
 </manifest>
