--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.koushikdutta.async:androidasync:2.+'// 异步http框架，用于支持websocket请求和http请求
     compile 'com.github.bumptech.glide:glide:3.7.0' //glide,图片加载类库
     compile 'com.jcodecraeer:xrecyclerview:1.3.2'   //用于实现recyclerview下拉刷新，上拉加载更多
-    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.google.code.gson:gson:2.6.2'   //json序列化
+    compile 'jp.wasabeef:glide-transformations:2.0.2'   //glide实现图片各种形状
 }
 
