--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".module.demo.MainActivity" />
+        <activity android:name=".module.demo.MainActivity"></activity>
         <activity android:name=".module.publish.view.impl.PublishActivity" />
         <activity android:name=".module.play.view.impl.PlayActivity" />
         <activity
@@ -43,7 +43,9 @@
         <activity
             android:name=".module.capture.view.impl.CaptureActivity"
             android:launchMode="singleTask" />
-        <activity android:name=".module.home.view.impl.HomeActivity" />
+        <activity
+            android:name=".module.home.view.impl.HomeActivity"
+            android:launchMode="singleTask" />
         <activity android:name=".module.chat.view.impl.ChatActivity" />
         <!-- service -->
         <service
@@ -53,19 +55,20 @@
             android:name=".module.capture.service.CaptureService"
             android:exported="false" />
         <service android:name=".module.chat.service.ChatService" />
-        <service
-            android:name=".module.login.service.HttpService"
-            android:exported="false" />
 
         <activity android:name=".module.home.view.impl.SingleCategoryActivity" />
-        <activity android:name=".module.login.view.LoginActivity">
+        <activity
+            android:name=".module.login.view.impl.LoginActivity"
+            android:launchMode="singleTask">
+
+        </activity>
+        <activity android:name=".module.login.view.impl.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
