--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,6 @@ dependencies {
     compile 'com.jcodecraeer:xrecyclerview:1.3.2'   //用于实现recyclerview下拉刷新，上拉加载更多
     compile 'com.google.code.gson:gson:2.6.2'   //json序列化
     compile 'jp.wasabeef:glide-transformations:2.0.2'   //glide实现图片各种形状
-    compile 'com.github.Aspsine:SwipeToLoadLayout:1.0.4'    //上拉更新，下拉加载
+    //compile 'com.github.Aspsine:SwipeToLoadLayout:1.0.4'    //上拉更新，下拉加载
 }
 
