--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,15 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        manifestPlaceholders = [
+                GETUI_APP_ID : "h5vhTEXk1f554YtJlkRDh4",
+                GETUI_APP_KEY : "AhUU3DgXY47byZdhK4fr72",
+                GETUI_APP_SECRET : "vMr70GJY798g5oaN06MA26"
+        ]
+        ndk {
+            abiFilters "armeabi", "armeabi-v7a", "x86_64"
+        }
+
     }
     buildTypes {
         release {
@@ -25,7 +34,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:support-v4:25.1.1'
+    compile 'com.android.support:support-v4:+'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'net.steamcrafted:materialiconlib:1.1.3' // 图标库
@@ -39,9 +48,10 @@ dependencies {
     compile 'me.majiajie:pager-bottom-tab-strip:2.1.0'  //主界面的底部导航栏
     compile 'com.koushikdutta.async:androidasync:2.+'// 异步http框架，用于支持websocket请求和http请求
     compile 'com.github.bumptech.glide:glide:3.7.0' //glide,图片加载类库
-    compile 'com.jcodecraeer:xrecyclerview:1.3.2'   //用于实现recyclerview下拉刷新，上拉加载更多
+    //compile 'com.jcodecraeer:xrecyclerview:1.3.2'   //用于实现recyclerview下拉刷新，上拉加载更多
     compile 'com.google.code.gson:gson:2.6.2'   //json序列化
     compile 'jp.wasabeef:glide-transformations:2.0.2'   //glide实现图片各种形状
     //compile 'com.github.Aspsine:SwipeToLoadLayout:1.0.4'    //上拉更新，下拉加载
+    compile 'com.getui:sdk:2.10.2.0'    //个推sdk
 }
 
