搜索直播间。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,7 @@
         </activity>
         <activity android:name=".module.home.view.impl.UserInfoActivity"></activity>
         <activity android:name=".module.anchor.view.impl.ApplyAnchorActivity"/>
+        <activity android:name=".module.home.view.impl.SearchLiveRoomActivity" />
     </application>
 
 </manifest>
