--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,14 +31,15 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <!-- 个推sdk所需的权限，包括权限其他权限上面已经有了。 -->
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOC" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.GET_TASKS"/>
-    <uses-permission android:name="getui.permission.GetuiService.${applicationId}"/>
-    <permission android:name="getui.permission.GetuiService.${applicationId}"
-        android:protectionLevel="normal"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="getui.permission.GetuiService.${applicationId}" />
 
+    <permission
+        android:name="getui.permission.GetuiService.${applicationId}"
+        android:protectionLevel="normal" />
 
     <application
         android:name=".common.application.CommonApplication"
@@ -77,7 +78,7 @@
         <activity android:name=".module.home.view.impl.SingleCategoryActivity" />
         <activity
             android:name=".module.login.view.impl.LoginActivity"
-            android:launchMode="singleTask"></activity>
+            android:launchMode="singleTask" />
         <activity android:name=".module.login.view.impl.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -85,9 +86,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".module.home.view.impl.UserInfoActivity"></activity>
-        <activity android:name=".module.anchor.view.impl.ApplyAnchorActivity"/>
+        <activity android:name=".module.home.view.impl.UserInfoActivity" />
+        <activity android:name=".module.anchor.view.impl.ApplyAnchorActivity" />
         <activity android:name=".module.home.view.impl.SearchLiveRoomActivity" />
+        <activity android:name=".module.anchor.view.impl.AnchorInfoActivity"></activity>
     </application>
 
 </manifest>
