--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".module.demo.MainActivity" />
+        <activity android:name=".module.demo.MainActivity">
+        </activity>
         <activity android:name=".module.publish.view.impl.PublishActivity"  android:configChanges="orientation|screenSize"/>
         <activity android:name=".module.play.view.impl.PlayActivity" />
         <activity
@@ -59,7 +60,8 @@
             android:launchMode="singleTask" />
         <activity
             android:name=".module.home.view.impl.HomeActivity"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
         <!-- service -->
         <service
             android:name=".common.service.PreferencesService"
@@ -92,7 +94,7 @@
         <activity android:name=".module.home.view.impl.SearchLiveRoomActivity" />
         <activity android:name=".module.anchor.view.impl.AnchorInfoActivity" />
         <activity android:name=".module.home.view.impl.LiveRoomCoverActivity"></activity>
-
+        <activity android:name=".module.demo.PlayDemoActivity" />
     </application>
 
 </manifest>
