--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,12 +48,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".module.demo.MainActivity"></activity>
+        <activity android:name=".module.demo.MainActivity" />
         <activity
             android:name=".module.publish.view.impl.PublishActivity"
             android:configChanges="orientation|screenSize" />
-        <activity
-            android:name=".module.play.view.impl.PlayActivity" />
+        <activity android:name=".module.play.view.impl.PlayActivity" />
         <activity
             android:name="com.tencent.rtmp.video.TXScreenCapture$TXScreenCaptureAssistantActivity"
             android:theme="@android:style/Theme.Translucent" />
@@ -95,8 +94,9 @@
         <activity android:name=".module.anchor.view.impl.ApplyAnchorActivity" />
         <activity android:name=".module.home.view.impl.SearchLiveRoomActivity" />
         <activity android:name=".module.anchor.view.impl.AnchorInfoActivity" />
-        <activity android:name=".module.home.view.impl.LiveRoomCoverActivity"></activity>
+        <activity android:name=".module.home.view.impl.LiveRoomCoverActivity" />
         <activity android:name=".module.demo.PlayDemoActivity" />
+        <activity android:name=".module.demo.SettingActivity" />
     </application>
 
 </manifest>
